--- a/codejam/index.html
+++ b/codejam/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeJam-ZeroOne</title>
-    <link rel="stylesheet" href="index.css">
+    <title>CodeJam</title>
+    <link rel="stylesheet" href=index.css">
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-one">
-                <img src="photo_6316402050979708078_y.jpg" alt="">
-            </div>
-            <div class="card-two">
-                <h1>ZeroOne Code Club</h1>
-                <h2>Student Activity Center</h2>
+  <div class="container">
+    <div class=""card">
+        <div class="card-one">
+            <img src="1695054453629.jpeg" alt="">
+            <div class="card-two"></div>
+            <h1 ZeroOne Code Club></h1>
+            
+            <h2>Student Activity center</h2>
+            <a href="#">join</a> 
+            
 
-                <a href="#">Join</a>
-            </div>
-        </div>
     </div>
 </body>
 </html>
